force-app/main/default/objects/EMS_LM_Leave__c/EMS_LM_Leave__c.object-meta.xml
<CustomObject>
    <description>Used to store types of Leaves available in Organization</description>
    <label>Leave Type</label>
    <nameField>
        <label>Leave Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>