force-app/main/default/objects/EMS_LM_Leave__c/fields/Consider_Negative__c.field-meta.xml
<CustomField>
    <fullName>Consider_Negative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Negative ?</label>
    <type>Checkbox</type>
</CustomField>