force-app/main/default/objects/EMS_LM_Leave__c/fields/EMS_LM_No_Of_Leaves__c.field-meta.xml
<CustomField>
    <fullName>EMS_LM_No_Of_Leaves__c</fullName>
    <label>Allowed Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>