force-app/main/default/objects/EMS_LM_Leave__c/fields/Is_Proof_Submission_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Proof_Submission_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Proof Submission Required ?</label>
    <type>Checkbox</type>
</CustomField>