force-app/main/default/objects/EMS_LM_Leave__c/fields/Max_Leaves_Allowed_Neg__c.field-meta.xml
<CustomField>
    <fullName>Max_Leaves_Allowed_Neg__c</fullName>
    <label>Max Leaves Allowed (Neg)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>