force-app/main/default/objects/EMS_LM_Leave__c/fields/Prior_days_to_apply__c.field-meta.xml
<CustomField>
    <fullName>Prior_days_to_apply__c</fullName>
    <inlineHelpText>Specify the days before that employee can apply this leave type</inlineHelpText>
    <label>Prior days to apply ?</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>