force-app/main/default/objects/EMS_LM_Leave__c/validationRules/Leave_Days_Shouldnot_Exceed_5Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Days_Shouldnot_Exceed_5Days</fullName>
    <active>false</active>
    <description>Ideally, Leave Days Should not Exceed 5 days</description>
    <errorConditionFormula>AND(
 ISPICKVAL( EMS_LM_Leave_Type__c , &apos;Paternity Leave&apos;),
 EMS_LM_No_Of_Leaves__c &gt; 5
)</errorConditionFormula>
    <errorMessage>Employees are permitted to use up to 5 days of PTO for paternity leaves.</errorMessage>
</ValidationRule>